# taco-toolbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.devin/: wiki.json
.github/workflows/: main.yml  on-release-main.yml  test.yml  validate-codecov-config.yml
docs/: index.md  modules.md
tacotoolbox/: __init__.py  _column_utils.py  _constants.py  _exceptions.py  _helpers.py  _logging.py  _metadata.py  _progress.py  _remote_io.py  _tacollection.py  _timestamps.py  _types.py  _utils.py  _validation.py  _virtual_zip.py  create.py  datamodel.py  docs.py  edit.py  export.py  extract.py  io.py  remote_io.py  sanity.py  tacocat.py  tacollection.py  translate.py  version.py
tacotoolbox/_writers/: export_writer.py  folder_writer.py  zip_writer.py
tacotoolbox/datamodel/: __init__.py  sample.py  taco.py  tortilla.py
tacotoolbox/sample/: datamodel.py
tacotoolbox/sample/extensions/: geotiff_stats.py  istac.py  packing.py  scaling.py  split.py  stac.py  stats.py  tacotiff.py
tacotoolbox/sample/validators/: _base.py  tacotiff.py
tacotoolbox/specification/: datamodel_authors.py  datamodel_curators.py  datamodel_extent.py  datamodel_labels.py  datamodel_opticaldata.py  datamodel_scientific.py  datamodel_tasks.py
tacotoolbox/taco/: datamodel.py
tacotoolbox/taco/extensions/: labels.py  opticaldata.py  opticaldata_utils.py  scientific.py  split.py
tacotoolbox/templates/: collection.html  collection.md  map.js  pit_graph.js  styles.css  ui-interactions.js
tacotoolbox/tortilla/: datamodel.py
tacotoolbox/tortilla/data/admin/: admin0.parquet  admin1.parquet  admin2.parquet
tacotoolbox/tortilla/extensions/: geoenrich.py  majortom.py  spatial_grouping.py  territorial.py  territorial_products.py  territorial_utils.py
tacotoolbox/v1/: __init__.py  create.py
tacotoolbox/v1/specification/: __init__.py  datamodel_authors.py  datamodel_contacts.py  datamodel_hyperlink.py  datamodel_opticaldata.py  datamodel_split.py  datamodel_target.py
tacotoolbox/validator/: __init__.py  sample.py
tests/: README.md  test_foo.py
tests/fixtures/: README.md  regenerate.py
tests/fixtures/folder/simple/: COLLECTION.json
tests/fixtures/folder/simple/DATA/: multitemporal_64x64
tests/fixtures/folder/simple/METADATA/: level0.parquet
tests/fixtures/geotiffs/: categorical_128x128.tif  rgb_256x256.tif  single_band_128x128.tif
tests/fixtures/zip/nested_a/: nested_a.tacozip
tests/fixtures/zip/nested_b/: nested_b.tacozip
tests/fixtures/zip/simple/: simple.tacozip
tests/integration/: conftest.py  test_folder_writer.py  test_tacocat.py  test_tacollection.py  test_zip_writer.py
tests/unit/: conftest.py  test_column_utils.py  test_create.py  test_docs.py  test_init.py  test_logging.py  test_metadata.py  test_progress.py  test_tacollection.py  test_validation.py  test_virtual_zip.py
tests/unit/sample/: conftest.py  test_datamodel.py
tests/unit/sample/extensions/: test_geotiff_stats.py  test_istac.py  test_scaling.py  test_split.py  test_stac.py
tests/unit/taco/: conftest.py  test_datamodel.py
tests/unit/taco/extensions/: test_labels.py  test_opticaldata.py  test_scientific.py  test_split.py
tests/unit/tortilla/: conftest.py  test_datamodel.py
tests/unit/tortilla/extensions/: test_geoenrich.py  test_majortom.py  test_spatial_grouping.py
