[tool.poetry]
name = "tacotoolbox"
version = "0.21.0"
description = "We make tacos 🔨"
authors = ["Cesar Aybar <cesar.aybar@uv.es>"]
repository = "https://github.com/taco-toolbox/tacotoolbox"
documentation = "http://tacofoundation.github.io/taco-toolbox"
readme = "README.md"
packages = [
  {include = "tacotoolbox"}
]

include = [
    "tacotoolbox/tortilla/data/admin/*.parquet"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = ">=2.10.3"
pyarrow = ">=21.0.0"
pyproj = ">=3.7.2"
shapely = ">=2.1.1"
tacozip = ">=0.11.4"
tqdm = ">=4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "_nest_asyncio.py"    
]

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM",
    "I", "C90", "E", "W", "F", "PGH", "UP",
    "RUF", "TRY",
]
ignore = ["E501", "E731", "TRY003", "F401", "F821", "S311", "UP017", "A001", "A002", "SIM103"]
per-file-ignores = { "tests/*" = ["S101"],  "tacotoolbox/v1/*" = ["ALL"] }

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["tacotoolbox"]


[tool.mypy]
exclude = [
    "^tacotoolbox/_nest_asyncio.py",
]
ignore_missing_imports = true